[package]
name = "simple-nft"
version = "0.1.0"
authors = ["Willem Wyndham <willem@near.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
# near-sdk = { path = "../../../near-sdk-rs/near-sdk"}
# near-contract-standards = { path = "../../../near-sdk-rs/near-contract-standards" }
near-sdk = { version = "4.0.0-pre.9"}
near-contract-standards = { version = "4.0.0-pre.9"}
near-units = "0.2.0"
serde_with = "1.0.0"
witgen = "0.12.0"
image = "0.24.2"
num-complex = "0.4.1"
image-base64-wasm = "0.6.0"
data-encoding = "2.3.2"
rand = "0.8.5"

